# tools-git-helper

./: LICENSE  README.md  ai-rules.md  git-commit-workflow-improvements.md  git-commit-workflow-rules.md  git-workflow.bat  git-workflow.py  pyproject.toml
docs/: git-commit-workflow-improvements.md  git-workflow-deployment.md  project-details.md  project-improvements.md
src/git_helper/: __init__.py  cli.py  commit_validator.py  diff_viewer.py  file_utils.py  formatters.py  git_utils.py  main.py  models.py
src/git_workflow/: cli.py  file_utils.py  formatters.py  git_utils.py  main.py  models.py
tests/: test_diff_viewer.py  test_git_utils_diff.py
