[project]
name = "git-workflow-tool"
version = "0.1.0"
description = "A tool for managing git commits with structured workflows"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Windsurf Configuration Team" }
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.9.1"
]

[project.scripts]
gw-commit = "git_workflow.main:cli"

[project.urls]
Homepage = "https://github.com/rkaramc/git-workflow-tool"
Repository = "https://github.com/rkaramc/git-workflow-tool.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_workflow"]
